# 2026SE_Task1_Thribhu.K

./: .env-example  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
databaseFiles/: mono.db
docs/: Privacy Policy.md  foobarbaz.md  tasks to do by end of day.md
src/: main.py  old_main.py  user_management.py
src/backend/: db_handler.py  exceptions.py  filters.py  main.py  shared.py
src/backend/endpoints/: __init__.py  auth.py  devlog.py
src/endpoints/: auth.py  devlog.py
src/frontend/: main.py
static/js/: app.js  main.js  serviceWorker.js
templates/: add.html  auth_redirect.html  dashboard.html  devlog.html  index.html  login.html  lost_dumbass.html  new_project.html  privacy.html  project_settings.html  register.html  template.html  user_settings.html
templates/old/: layout.html
templates/partials/: sidebar.html
