[project]
name = "2026se-task1-thribhu-k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask",
    "bcrypt",
    "flask_wtf",
    "flask-csp",
    "requests",
    "flask-jwt-extended>=4.7.1",
    "python-dotenv>=1.2.1",
    "flask-cors>=6.0.1",
    "asyncio>=4.0.0",
    "bandit>=1.9.2",
    "qrcode>=8.2",
    "pyotp>=2.9.0",
    "pillow>=12.0.0",
]
